--- a/EntryNow.Web/Pages/Entries/Edit.razor
+++ b/EntryNow.Web/Pages/Entries/Edit.razor
@@ -1,8 +1,10 @@
-﻿@page "/entries/test/{id}"
+﻿@page "/entries/edit/{id}"
 @attribute [Authorize]
 @inject IAlertService AlertService
 @using EntryNow.Web.Constants
 @inject NavigationManager NavigationManager
+@using Microsoft.JSInterop
+@inject IJSRuntime JSRuntime;
 
     <section class="content-header">
       <div class="container-fluid">
@@ -786,7 +788,7 @@
     {
         AlertService.Clear();
         loading = true;
-        
+
         if (string.IsNullOrEmpty(this.referenceValue))
         {
             AlertService.Error("Reference is required!", keepAfterRouteChange: true);
@@ -802,7 +804,9 @@
                 AlertService.Success("Entry Edited Successfully", keepAfterRouteChange: true);
                 loading = false;
                 StateHasChanged();
-                NavigationManager.NavigateTo("entries/index");
+
+                await Task.Delay(3000);
+                await JSRuntime.InvokeVoidAsync($"window.close");
             }
             else
             {
