--- a/EntryNow.Web/Pages/Entries/Add.razor
+++ b/EntryNow.Web/Pages/Entries/Add.razor
@@ -171,7 +171,7 @@
                               <div class="form-group">
                                   <div class="form-check" style="margin-top:33px;">
                                       <input type="checkbox" class="form-check-input" id="exampleCheck1" @bind="@checkboxvalue" style="height:20px;width:20px;">
-                                      <label class="form-check-label" for="exampleCheck1" style="margin-top:1px;">&nbsp;&nbsp;Is a Reference?</label>
+                                      &nbsp;&nbsp;Is a Reference?
                                   </div>
                               </div>
                           </div>
